Project: - useless build files were removed - .gitignore was updated - C++17
Documentation:
- Logcat documentation

android_vulkan:
- warning suppressor utils were added
- memory allocation API was added to Renderer class
- Vulkan memory leak subsystem were refactored

3rd party:
- stb_image library was added

rotating_mesh:
- meshes were added
- textures were added
- Game class development
- Texture2D class development

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required ( VERSION 3.10.2 )
-set ( CMAKE_CXX_STANDARD 14 )
+set ( CMAKE_CXX_STANDARD 17 )
 
 # Android native activity glue
 
@@ -57,6 +57,8 @@ add_library ( android-vulkan
     app/src/main/cpp/sources/mandelbrot/mandelbrot_base.cpp
     app/src/main/cpp/sources/mandelbrot/mandelbrot_lut_color.cpp
     app/src/main/cpp/sources/rainbow/rainbow.cpp
+    app/src/main/cpp/sources/rotating_mesh/game.cpp
+    app/src/main/cpp/sources/rotating_mesh/texture2D.cpp
 )
 
 target_include_directories ( android-vulkan
