GXCommon: - library was integrated
android_vulkan:
- dead code was removed
- warning suppressor refactoring

mandelbrot:
- warning suppressor refactoring

rainbow:
- warning suppressor refactoring

rotating_mesh:
- VertexInfo refactoring
- warning suppressor refactoring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ add_library ( android-vulkan
     app/src/main/cpp/sources/main.cpp
     app/src/main/cpp/sources/renderer.cpp
     app/src/main/cpp/sources/vulkan_utils.cpp
+    app/src/main/cpp/sources/GXCommon/GXMath.cpp
     app/src/main/cpp/sources/mandelbrot/mandelbrot_analytic_color.cpp
     app/src/main/cpp/sources/mandelbrot/mandelbrot_base.cpp
     app/src/main/cpp/sources/mandelbrot/mandelbrot_lut_color.cpp
