docs: - SPIR-V disassembly guide was added - DirectX alignment layout rules
android_vulkan:
- DX alignment macro

rotating_mesh:
- UniformBuffer class was finished
- Runtime uniform buffer updating
- static-mesh.ps shader was fixed (wrong binding indices)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,7 @@ add_library ( android-vulkan
     app/src/main/cpp/sources/rotating_mesh/game.cpp
     app/src/main/cpp/sources/rotating_mesh/mesh_geometry.cpp
     app/src/main/cpp/sources/rotating_mesh/texture2D.cpp
+    app/src/main/cpp/sources/rotating_mesh/uniform_buffer.cpp
 )
 
 target_include_directories ( android-vulkan
