android_vulkan: - Vulkan validation layers were deployed - code style

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,7 @@ target_compile_definitions ( android-vulkan
     PRIVATE
     -DANDROID_VULKAN_DEBUG
     -DANDROID_VULKAN_LEAK_STRICT_MODE
+    -DANDROID_VULKAN_ENABLE_VULKAN_VALIDATION_LAYERS
 )
 
 target_link_libraries ( android-vulkan
