--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,8 @@
 
         <activity
             android:name="android.app.NativeActivity"
-            android:configChanges="orientation|keyboardHidden"
-            android:screenOrientation="landscape"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
+            android:screenOrientation="portrait"
             android:label="@string/app_name">
 
             <meta-data
