Documentation: - requirements were updated
Project:
- DirectX Shader Compiler version was updated to 1.5.2005.10011

android_vulkan:
- game deploy logic was automated

rotating_mesh:
- resource management was simplified
- useless VK_SUBOPTIMAL_KHR error checking was removed

mandelbrot:
- useless VK_SUBOPTIMAL_KHR error checking was removed

rainbow:
- useless VK_SUBOPTIMAL_KHR error checking was removed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,7 @@ add_library ( android-vulkan
     app/src/main/cpp/sources/mandelbrot/mandelbrot_base.cpp
     app/src/main/cpp/sources/mandelbrot/mandelbrot_lut_color.cpp
     app/src/main/cpp/sources/rainbow/rainbow.cpp
+    app/src/main/cpp/sources/rotating_mesh/drawcall.cpp
     app/src/main/cpp/sources/rotating_mesh/game.cpp
     app/src/main/cpp/sources/rotating_mesh/mesh_geometry.cpp
     app/src/main/cpp/sources/rotating_mesh/texture2D.cpp
