Documentation: - requirements were updated
Project:
- Android SDK Build-Tools was updated 30.0.0
- Android SDK Platform-Tools was updated to 30.0.3
- DirectX Shader Compiler version was updated to 1.5.2005.10052
- Gradle was updated to 6.5

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "30.0.0-rc4"
-    ndkVersion "21.2.6472646"
+    buildToolsVersion "30.0.0"
+    ndkVersion "21.3.6528147"
 
     defaultConfig {
         applicationId "com.goshido.android_vulkan"
