--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,9 +110,9 @@ target_compile_options ( android-vulkan PRIVATE
 target_compile_definitions ( android-vulkan
     PRIVATE
     -DANDROID_NATIVE_MODE_PORTRAIT
-#    -DANDROID_VULKAN_DEBUG
-#    -DANDROID_VULKAN_ENABLE_VULKAN_VALIDATION_LAYERS
-#    -DANDROID_VULKAN_STRICT_MODE
+    -DANDROID_VULKAN_DEBUG
+    -DANDROID_VULKAN_ENABLE_VULKAN_VALIDATION_LAYERS
+    -DANDROID_VULKAN_STRICT_MODE
 )
 
 # Exporting native app glue entry point.
