--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,6 +87,8 @@ add_library ( android-vulkan
     app/src/main/cpp/sources/pbr/gbuffer.cpp
     app/src/main/cpp/sources/pbr/geometry_pass.cpp
     app/src/main/cpp/sources/pbr/light.cpp
+    app/src/main/cpp/sources/pbr/light_volume.cpp
+    app/src/main/cpp/sources/pbr/light_volume_program.cpp
     app/src/main/cpp/sources/pbr/material.cpp
     app/src/main/cpp/sources/pbr/material_manager.cpp
     app/src/main/cpp/sources/pbr/mesh_group.cpp
@@ -99,6 +101,7 @@ add_library ( android-vulkan
     app/src/main/cpp/sources/pbr/pbr_game.cpp
     app/src/main/cpp/sources/pbr/point_light.cpp
     app/src/main/cpp/sources/pbr/point_light_component.cpp
+    app/src/main/cpp/sources/pbr/point_light_lightup.cpp
     app/src/main/cpp/sources/pbr/point_light_pass.cpp
     app/src/main/cpp/sources/pbr/point_light_shadowmap_generator_program.cpp
     app/src/main/cpp/sources/pbr/present_pass.cpp
