pbr: - point light shader - light volume refactoring - point light lightup development - point light lightup program - uniform buffer pool refactoring - code style

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,6 +89,7 @@ add_library ( android-vulkan
     app/src/main/cpp/sources/pbr/light.cpp
     app/src/main/cpp/sources/pbr/light_volume.cpp
     app/src/main/cpp/sources/pbr/light_volume_program.cpp
+    app/src/main/cpp/sources/pbr/lightup_common_descriptror_set_layout.cpp
     app/src/main/cpp/sources/pbr/material.cpp
     app/src/main/cpp/sources/pbr/material_manager.cpp
     app/src/main/cpp/sources/pbr/mesh_group.cpp
@@ -101,7 +102,9 @@ add_library ( android-vulkan
     app/src/main/cpp/sources/pbr/pbr_game.cpp
     app/src/main/cpp/sources/pbr/point_light.cpp
     app/src/main/cpp/sources/pbr/point_light_component.cpp
+    app/src/main/cpp/sources/pbr/point_light_descriptor_set_layout.cpp
     app/src/main/cpp/sources/pbr/point_light_lightup.cpp
+    app/src/main/cpp/sources/pbr/point_light_lightup_program.cpp
     app/src/main/cpp/sources/pbr/point_light_pass.cpp
     app/src/main/cpp/sources/pbr/point_light_shadowmap_generator_program.cpp
     app/src/main/cpp/sources/pbr/present_pass.cpp
