pbr: - program base class refactoring - point light lightup implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,11 @@
 cmake_minimum_required ( VERSION 3.10.2 )
 set ( CMAKE_CXX_STANDARD 17 )
 
+# Enable link time optimization for release build via native flag.
+# Note there is CMAKE_INTERPROCEDURAL_OPTIMZATION_RELEASE built-in variable but it works not reliably with
+# NDK 22.0.7026061 at link time (linking errors on Linux).
+string(APPEND CMAKE_CXX_FLAGS_RELEASE " -ftlo")
+
 # Android native activity glue
 
 add_library ( native_app_glue
@@ -111,7 +116,6 @@ add_library ( android-vulkan
     app/src/main/cpp/sources/pbr/point_light_shadowmap_generator_program.cpp
     app/src/main/cpp/sources/pbr/present_pass.cpp
     app/src/main/cpp/sources/pbr/program.cpp
-    app/src/main/cpp/sources/pbr/program_resource.cpp
     app/src/main/cpp/sources/pbr/render_session.cpp
     app/src/main/cpp/sources/pbr/render_session_stats.cpp
     app/src/main/cpp/sources/pbr/sampler.cpp
