pbr: - point light attenuation model has been fixed - "mad" optimization - dirty gamma correction

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ set ( CMAKE_CXX_STANDARD 17 )
 # Enable link time optimization for release build via native flag.
 # Note there is CMAKE_INTERPROCEDURAL_OPTIMZATION_RELEASE built-in variable but it works not reliably with
 # NDK 22.0.7026061 at link time (linking errors on Linux).
-string(APPEND CMAKE_CXX_FLAGS_RELEASE " -flto")
+string(APPEND CMAKE_CXX_FLAGS_RELEASE " -flto=thin")
 
 # Android native activity glue
 
