pbr: - light pass decouple

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,9 +93,11 @@ add_library ( android-vulkan
     app/src/main/cpp/sources/pbr/component.cpp
     app/src/main/cpp/sources/pbr/gbuffer.cpp
     app/src/main/cpp/sources/pbr/geometry_pass.cpp
+    app/src/main/cpp/sources/pbr/reflection_global_descriptor_set_layout.cpp
     app/src/main/cpp/sources/pbr/reflection_global_pass.cpp
     app/src/main/cpp/sources/pbr/reflection_global_program.cpp
     app/src/main/cpp/sources/pbr/light.cpp
+    app/src/main/cpp/sources/pbr/light_pass.cpp
     app/src/main/cpp/sources/pbr/lightup_common_descriptor_set.cpp
     app/src/main/cpp/sources/pbr/lightup_common_descriptor_set_layout.cpp
     app/src/main/cpp/sources/pbr/light_lightup_base_program.cpp
