Project: - DirectX Shader Compiler has been updated to 1.6.2104.10074
pbr:
- light module refactoring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,6 +128,9 @@ add_library ( android-vulkan
     app/src/main/cpp/sources/pbr/reflection_local_descriptor_set_layout.cpp
     app/src/main/cpp/sources/pbr/reflection_local_pass.cpp
     app/src/main/cpp/sources/pbr/reflection_local_program.cpp
+    app/src/main/cpp/sources/pbr/reflection_probe.cpp
+    app/src/main/cpp/sources/pbr/reflection_probe_global.cpp
+    app/src/main/cpp/sources/pbr/reflection_probe_local.cpp
     app/src/main/cpp/sources/pbr/render_session.cpp
     app/src/main/cpp/sources/pbr/render_session_stats.cpp
     app/src/main/cpp/sources/pbr/sampler.cpp
