android_vulkan: - rigid body integration - global force - physics class - contact manager development
pbr:
- static mesh component API has been extended
- point light pass has been fixed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,15 +67,18 @@ find_library ( log-lib
 
 add_library ( android-vulkan
     SHARED
+    app/src/main/cpp/sources/contact_manager.cpp
     app/src/main/cpp/sources/core.cpp
     app/src/main/cpp/sources/file.cpp
     app/src/main/cpp/sources/gamepad.cpp
+    app/src/main/cpp/sources/global_force_gravity.cpp
     app/src/main/cpp/sources/half_types.cpp
     app/src/main/cpp/sources/key_bind.cpp
     app/src/main/cpp/sources/ktx_media_container.cpp
     app/src/main/cpp/sources/logger.cpp
     app/src/main/cpp/sources/main.cpp
     app/src/main/cpp/sources/mesh_geometry.cpp
+    app/src/main/cpp/sources/physics.cpp
     app/src/main/cpp/sources/renderer.cpp
     app/src/main/cpp/sources/rigid_body.cpp
     app/src/main/cpp/sources/shape.cpp
