Documentation: - validation layers page has been updated - About C++20 page has been updated - build requirements have been updated
third-party:
- libVkLayer_khronos_validation.so was updated from 124a97d684f8c451ea252e27728a5e84ae0bac3d commit

Project:
- C++20 transition
- -Wpedantic support
- Android SDK Build-Tools has been updated to 31.0.0
- DirectX Shader Compiler has been updated to 1.6.2106.10037
- SPIRV binaries have been included

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required ( VERSION 3.18.1 )
-set ( CMAKE_CXX_STANDARD 17 )
+set ( CMAKE_CXX_STANDARD 20 )
 project ( android-vulkan )
 
 # Enable link time optimization for release build via native flag.
@@ -162,6 +162,7 @@ target_compile_options ( android-vulkan PRIVATE
     -Werror
     -Wall
     -Wextra
+    -Wpedantic
     -Wshadow
 )
 
