android_vulkan: - ray caster debugging - assign name for texture 2D - code style
pbr:
- camera movement speed
- Submit as part of public StaticMeshComponent API
- material lookup fix
- code style

ray_casting:
- new subproject

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,6 +139,7 @@ add_library ( android-vulkan
     app/src/main/cpp/sources/pbr/mario/pipe_x2.cpp
     app/src/main/cpp/sources/pbr/mario/riddle.cpp
     app/src/main/cpp/sources/pbr/mario/world1x1.cpp
+    app/src/main/cpp/sources/pbr/ray_casting/ray_casting.cpp
     app/src/main/cpp/sources/rainbow/rainbow.cpp
     app/src/main/cpp/sources/rotating_mesh/game.cpp
     app/src/main/cpp/sources/rotating_mesh/game_analytic.cpp
