android_vulkan: - better Vulkan extension checking - vkGetPhysicalDeviceFeatures2 was added

--- a/app/src/main/cpp/include/vulkan_instance.in
+++ b/app/src/main/cpp/include/vulkan_instance.in
@@ -8,6 +8,7 @@ X ( vkEnumeratePhysicalDeviceGroups )
 X ( vkEnumeratePhysicalDevices )
 X ( vkGetDeviceProcAddr )
 X ( vkGetPhysicalDeviceFeatures )
+X ( vkGetPhysicalDeviceFeatures2 )
 X ( vkGetPhysicalDeviceFormatProperties )
 X ( vkGetPhysicalDeviceMemoryProperties )
 X ( vkGetPhysicalDeviceProperties )
