Documentation: - GXVec4 for Lua page has been added - GXMat4 for Lua page has been updated - GXMat3 for Lua page has been updated
pbr:
- GXVec4 for Lua: Init
- GXMat4 for Lua: MultiplyMatrixVector, MultiplyVectorMatrix
  TranslationF -> Translation
- GXMat3 for Lua: GetX, GetY, GetZ, Identity
- scriptable memory leak at destruction has been fixed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,8 +128,10 @@ add_library ( android-vulkan
     app/src/main/cpp/sources/pbr/sampler_manager.cpp
     app/src/main/cpp/sources/pbr/script_component.cpp
     app/src/main/cpp/sources/pbr/script_engine.cpp
+    app/src/main/cpp/sources/pbr/scriptable_gxmat3.cpp
     app/src/main/cpp/sources/pbr/scriptable_gxmat4.cpp
     app/src/main/cpp/sources/pbr/scriptable_gxvec3.cpp
+    app/src/main/cpp/sources/pbr/scriptable_gxvec4.cpp
     app/src/main/cpp/sources/pbr/scriptable_logger.cpp
     app/src/main/cpp/sources/pbr/static_mesh_component.cpp
     app/src/main/cpp/sources/pbr/stipple_material.cpp
