Documentation: - GXQuat for Lua page has been added - GXMat4 for Lua page has been updated - GXMat3 for Lua page has been updated
pbr:
- GXQuat for Lua: FromAxisAngle, Multiply, Normalize
  TransformFast
- GXMat3 for Lua: Inverse, Multiply, MultiplyMatrixVector,
  MultiplyVectorMatrix, SetX, SetY, SetZ, Transpose
- Lua metatable strategy refactoring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,6 +130,7 @@ add_library ( android-vulkan
     app/src/main/cpp/sources/pbr/script_engine.cpp
     app/src/main/cpp/sources/pbr/scriptable_gxmat3.cpp
     app/src/main/cpp/sources/pbr/scriptable_gxmat4.cpp
+    app/src/main/cpp/sources/pbr/scriptable_gxquat.cpp
     app/src/main/cpp/sources/pbr/scriptable_gxvec3.cpp
     app/src/main/cpp/sources/pbr/scriptable_gxvec4.cpp
     app/src/main/cpp/sources/pbr/scriptable_logger.cpp
