Documentation: - build requirements have been updated
Project:
- Gradle has been updated to 7.4.2-bin

pbr:
- RenderableComponent interface
- stipple geometry counter has been fixed
- code style

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,6 +126,7 @@ add_library ( android-vulkan
     app/src/main/cpp/sources/pbr/reflection_probe_local.cpp
     app/src/main/cpp/sources/pbr/render_session.cpp
     app/src/main/cpp/sources/pbr/render_session_stats.cpp
+    app/src/main/cpp/sources/pbr/renderable_component.cpp
     app/src/main/cpp/sources/pbr/sampler.cpp
     app/src/main/cpp/sources/pbr/sampler_manager.cpp
     app/src/main/cpp/sources/pbr/scene.cpp
