Project: - Android Studio Chipmunk | 2021.2.1 support - Android Studio Gradle Plugin has been updated to 7.2.0
Documentation:
- Lua: CameraComponent page
- Lua: ScriptComponent OnRenderTargetChanged event
- Lua: Scene - GetRenderTargetAspectRatio | GetRenderTargetWidth | GetRenderTargetHeight | SetActiveCamera API

pbr:
- CameraComponent has been introduced
- Lua: ScriptComponent OnRenderTargetChanged event
- Lua: Scene - GetRenderTargetAspectRatio | GetRenderTargetWidth | GetRenderTargetHeight | SetActiveCamera API

pbr::mario:
- scriptable camera actor development

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,6 +78,7 @@ add_library ( android-vulkan
     app/src/main/cpp/sources/mandelbrot/mandelbrot_lut_color.cpp
     app/src/main/cpp/sources/pbr/actor.cpp
     app/src/main/cpp/sources/pbr/camera.cpp
+    app/src/main/cpp/sources/pbr/camera_component.cpp
     app/src/main/cpp/sources/pbr/component.cpp
     app/src/main/cpp/sources/pbr/cube_map_manager.cpp
     app/src/main/cpp/sources/pbr/default_texture_manager.cpp
