--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ android {
     compileSdkVersion 31
     buildToolsVersion "32.0.0"
     ndkVersion "24.0.8215888"
+    namespace 'com.goshido.android_vulkan'
 
     defaultConfig {
         applicationId "com.goshido.android_vulkan"
