--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,6 +134,7 @@ add_library ( android-vulkan
     app/src/main/cpp/sources/pbr/scene.cpp
     app/src/main/cpp/sources/pbr/script_component.cpp
     app/src/main/cpp/sources/pbr/script_engine.cpp
+    app/src/main/cpp/sources/pbr/scriptable_gamepad.cpp
     app/src/main/cpp/sources/pbr/scriptable_gxmat3.cpp
     app/src/main/cpp/sources/pbr/scriptable_gxmat4.cpp
     app/src/main/cpp/sources/pbr/scriptable_gxquat.cpp
