--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,16 @@
-apply plugin: 'com.android.application'
+plugins {
+    id "com.android.application"
+    id "kotlin-android"
+}
 
 android {
     compileSdkVersion 31
     buildToolsVersion "32.0.0"
     ndkVersion "24.0.8215888"
-    namespace 'com.goshido.android_vulkan'
+    namespace 'com.goshidoInc.androidVulkan'
 
     defaultConfig {
-        applicationId "com.goshido.android_vulkan"
+        applicationId "com.goshidoInc.androidVulkan"
         minSdkVersion 30
         targetSdkVersion 31
         versionCode 1
@@ -56,10 +59,11 @@ android {
                 return project.rootDir.toString() + "/third-party/jniLibs"
             }
 
-
             jniLibs {
                 srcDir makePrebuildLibraryPath()
             }
+
+            java.srcDirs += "src/main/kotlin"
         }
     }
 }
@@ -67,4 +71,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
