--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,12 @@ buildscript {
         google()
         mavenCentral()
     }
+
+    ext.kotlin_version = '1.6.21'
+
     dependencies {
         classpath 'com.android.tools.build:gradle:7.2.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
