android_vulkan: - Vulkan device selection fix
pbr::mario:
- Goomba script development

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ android {
     compileSdkVersion 31
     buildToolsVersion "33.0.0"
     ndkVersion "25.0.8775105"
+    //ndkVersion "24.0.8215888"
     namespace 'com.goshidoInc.androidVulkan'
 
     defaultConfig {
